// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`merge instrument and react-docgen-typescript get config 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(ts\\|tsx\\)\\$/,
        "use": Array [
          Object {
            "loader": "/Users/atanasster/component-controls/node_modules/babel-loader/lib/index.js",
            "options": Object {
              "presets": Array [
                Array [
                  "react-app",
                  Object {
                    "flow": false,
                    "typescript": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      Object {
        "exclude": Array [
          /node_modules/,
        ],
        "loader": "babel-loader",
        "options": Object {
          "presets": Array [
            Array [
              "/Users/atanasster/component-controls/node_modules/@babel/preset-env/lib/index.js",
              Object {
                "modules": "commonjs",
              },
            ],
            "/Users/atanasster/component-controls/node_modules/@babel/preset-react/lib/index.js",
          ],
        },
        "test": /\\\\\\.\\(md\\|mdx\\)\\$/,
      },
      Object {
        "exclude": Array [
          /node_modules/,
          /node_modules/,
        ],
        "loader": "@component-controls/loader/loader",
        "options": Object {
          "mdx": Object {
            "transformMDX": true,
          },
          "propsLoaders": Array [
            Object {
              "name": "@component-controls/react-docgen-info",
              "test": /\\\\\\.\\(js\\|jsx\\)\\$/,
            },
            Object {
              "name": "@component-controls/react-docgen-typescript-info",
              "test": /\\\\\\.\\(ts\\|tsx\\)\\$/,
            },
          ],
        },
        "test": /\\\\\\.\\(md\\|mdx\\)\\$/,
      },
      Object {
        "enforce": "pre",
        "exclude": Array [
          /node_modules/,
          /node_modules/,
        ],
        "loader": "@component-controls/loader/loader",
        "options": Object {
          "propsLoaders": Array [
            Object {
              "name": "@component-controls/react-docgen-info",
              "test": /\\\\\\.\\(js\\|jsx\\)\\$/,
            },
            Object {
              "name": "@component-controls/react-docgen-typescript-info",
              "test": /\\\\\\.\\(ts\\|tsx\\)\\$/,
            },
          ],
        },
        "test": /\\\\\\.\\(story\\|stories\\)\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`merge instrument and react-docgen-typescript merge options 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.\\(ts\\|tsx\\)\\$/,
        "use": Array [
          Object {
            "loader": "/Users/atanasster/component-controls/node_modules/babel-loader/lib/index.js",
            "options": Object {
              "presets": Array [
                Array [
                  "react-app",
                  Object {
                    "flow": false,
                    "typescript": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      Object {
        "exclude": Array [
          /node_modules/,
        ],
        "loader": "babel-loader",
        "options": Object {
          "presets": Array [
            Array [
              "/Users/atanasster/component-controls/node_modules/@babel/preset-env/lib/index.js",
              Object {
                "modules": "commonjs",
              },
            ],
            "/Users/atanasster/component-controls/node_modules/@babel/preset-react/lib/index.js",
          ],
        },
        "test": /\\\\\\.\\(md\\|mdx\\)\\$/,
      },
      Object {
        "exclude": Array [
          /node_modules/,
          /node_modules/,
        ],
        "loader": "@component-controls/loader/loader",
        "options": Object {
          "mdx": Object {
            "transformMDX": true,
          },
          "prettier": Object {
            "tabWidth": 4,
          },
          "propsLoaders": Array [
            Object {
              "name": "@component-controls/react-docgen-info",
              "test": /\\\\\\.\\(js\\|jsx\\)\\$/,
            },
            Object {
              "name": "@component-controls/react-docgen-typescript-info",
              "test": /\\\\\\.\\(ts\\|tsx\\)\\$/,
            },
          ],
        },
        "test": /\\\\\\.\\(md\\|mdx\\)\\$/,
      },
      Object {
        "enforce": "pre",
        "exclude": Array [
          /node_modules/,
          /node_modules/,
        ],
        "loader": "@component-controls/loader/loader",
        "options": Object {
          "propsLoaders": Array [
            Object {
              "name": "@component-controls/react-docgen-info",
              "test": /\\\\\\.\\(js\\|jsx\\)\\$/,
            },
            Object {
              "name": "@component-controls/react-docgen-typescript-info",
              "test": /\\\\\\.\\(ts\\|tsx\\)\\$/,
            },
          ],
        },
        "test": /\\\\\\.\\(story\\|stories\\)\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
      },
    ],
  },
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
    ],
  },
}
`;
